Bug 743404: In nsHtml5TreeOperation::Perform, store the return-value of nsINode::IndexOf in a PRInt32 instead of a PRUint32, so we can range-check it. r=hsivonen